fixed answer alignment

--- a/src/index.css
+++ b/src/index.css
@@ -90,8 +90,8 @@ section {
 
 article {
   background-color: rgb(40, 40, 40);
-  min-width: 94vw;
   border-radius: 0.5rem;
+  max-width: 100vw;
   margin: 23px 20px 28px 20px;
   outline: none;
   border-color: #9ecaed;
@@ -119,6 +119,10 @@ article h3:hover {
 
 .mainAnswer {
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .helpers {
@@ -192,11 +196,12 @@ form select {
 }
 
 .snippet {
-  margin: 1.5rem 2rem 1rem 2rem;
+  margin: 1.5rem 0rem;
   font-size: 14px;
   border: 1px solid #fff;
   border-radius: 0.5rem;
   color: #fff;
+  width: 85vw;
   background-color: rgb(29, 31, 33);
 }
 
